2009-03-04  Dan Williams  <dcbw@redhat.com>

	* Tag 0.7.1-rc3 (0.7.0.99)

2009-02-18  Dan Williams  <dcbw@redhat.com>

	* Tag 0.7.1-rc1

2009-02-13  Dan Williams  <dcbw@redhat.com>

	* nm-openconnect-service.conf
		- Clean up dbus permissions; retain deny for compat with older dbus

2008-12-17  Dan Williams  <dcbw@redhat.com>

	Patch from David Woodhouse <dwmw2@infradead.org>

	* COPYING
		-add

2008-12-17  Dan Williams  <dcbw@redhat.com>

	Patch from David Woodhouse <dwmw2@infradead.org>

	* configure.in
		- Remove libgnomeui from configure.in. We don't need it.

2008-12-15  Dan Williams  <dcbw@redhat.com>

	* src/nm-openconnect-service-openconnect-helper.c
		- (main): MTU entry in IP4 config hash is supposed to be a uint

2008-11-26  David Woodhouse <dwmw2@infradead.org>

	* New files, copied from vpnc support.