@@ -46,15 +46,17 @@ typedef struct {
 } ValidProperty;
 
 static ValidProperty valid_properties[] = {
-	{ NM_OPENCONNECT_KEY_GATEWAY,   G_TYPE_STRING, 0, 0 },
-	{ NM_OPENCONNECT_KEY_CACERT,    G_TYPE_STRING, 0, 0 },
-	{ NM_OPENCONNECT_KEY_AUTHTYPE,  G_TYPE_STRING, 0, 0 },
-	{ NM_OPENCONNECT_KEY_USERCERT,  G_TYPE_STRING, 0, 0 },
-	{ NM_OPENCONNECT_KEY_USERNAME,  G_TYPE_STRING, 0, 0 },
-	{ NM_OPENCONNECT_KEY_XMLCONFIG, G_TYPE_STRING, 0, 0 },
-	{ NM_OPENCONNECT_KEY_PRIVKEY,   G_TYPE_STRING, 0, 0 },
-	{ NM_OPENCONNECT_KEY_CERTSIGS,  G_TYPE_STRING, 0, 0 },
-	{ NULL,                         G_TYPE_NONE, 0, 0 }
+	{ NM_OPENCONNECT_KEY_GATEWAY,     G_TYPE_STRING, 0, 0 },
+	{ NM_OPENCONNECT_KEY_CACERT,      G_TYPE_STRING, 0, 0 },
+	{ NM_OPENCONNECT_KEY_AUTHTYPE,    G_TYPE_STRING, 0, 0 },
+	{ NM_OPENCONNECT_KEY_USERCERT,    G_TYPE_STRING, 0, 0 },
+	{ NM_OPENCONNECT_KEY_USERNAME,    G_TYPE_STRING, 0, 0 },
+	{ NM_OPENCONNECT_KEY_XMLCONFIG,   G_TYPE_STRING, 0, 0 },
+	{ NM_OPENCONNECT_KEY_PRIVKEY,     G_TYPE_STRING, 0, 0 },
+	{ NM_OPENCONNECT_KEY_CERTSIGS,    G_TYPE_STRING, 0, 0 },
+	{ NM_OPENCONNECT_KEY_LASTHOST,    G_TYPE_STRING, 0, 0 },
+	{ NM_OPENCONNECT_KEY_AUTOCONNECT, G_TYPE_BOOLEAN, 0, 0 },
+	{ NULL,                           G_TYPE_NONE, 0, 0 }
 };
 
 static ValidProperty valid_secrets[] = {
